# Text_Editor

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  app  main.c  makefile
include/: MyRenderInterface.h  keyCallBack.h  window.h
src/: MyRenderInterface.cpp  keyHandling.cpp  main.cpp  main.rs  window.cpp
ui/: interface.glade
views/: index.html  style.rcss
window/: mainwindow.c  mainwindow.h  updateLine.c
